--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "set NODE_ENV=development& nodemon app.js",
+    "start": "set NODE_ENV=development& nodemon server.js",
     "start:prod": "set NODE_ENV=production& nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mohammad Yunus",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.6"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   }
 }
