--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
   "author": "Mohammad Yunus",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
